CB-16: scribe generate & modified table and resources
